@@ -1,6 +1,9 @@
 16 Jul 2010 Begin Function Keys (PF1-12) Support. PF1 defaults to HELP.
             Use DEFSYM command to set PF keys. DEFSYM PF01 HELP . You must include the ZERO
             as part of the name of the first 9 function keys. PF01-PF12.
+            You must also include the command target, "herc", "pscp" or "scp" as a prefix to
+            the command. DEFSYM PF12 "pscp netstat -a" for example.
+
 14 Jul 2010 Enhance devlist to display a single class of devices.
 13 Jul 2010 New startup option (-s) to define symbols at startup. Format: '-s sym=Value' 
             This can be done recursively. 
